# esp-modbus

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Kconfig  build_all.sh  comments.txt  component.mk
docs/: Doxyfile  README.md  conf.py  conf_common.py  deploy_production.sh  esp-modbus.rst  gen-dxd.py  link-roles.py
docs/en/: esp-modbus.rst  esp-modbus_.rst_  index.rst
examples/mb_master/: CMakeLists.txt  README.md
examples/mb_slave/: CMakeLists.txt
examples/mb_tcp_master/: CMakeLists.txt  README.md
examples/mb_tcp_master/main/: tcp_master.c
examples/mb_tcp_slave/: CMakeLists.txt
freemodbus/: README.rst
freemodbus/common/: esp_modbus_master.c  esp_modbus_slave.c  mbc_master.h  mbc_slave.h
freemodbus/common/include/: esp_modbus_common.h  esp_modbus_master.h  esp_modbus_slave.h
freemodbus/modbus/: mb_m.c
freemodbus/modbus/ascii/: mbascii.c  mbascii_m.c
freemodbus/modbus/include/: mbport.h
freemodbus/modbus/rtu/: mbrtu.c  mbrtu_m.c
freemodbus/port/: port.c  port.h  portevent.c  portserial.c  portserial_m.c  porttimer.c  porttimer_m.c
freemodbus/serial_master/modbus_controller/: mbc_serial_master.c
freemodbus/serial_slave/modbus_controller/: mbc_serial_slave.c
freemodbus/tcp_master/modbus_controller/: mbc_tcp_master.c
freemodbus/tcp_master/port/: port_tcp_master.c
freemodbus/tcp_slave/modbus_controller/: mbc_tcp_slave.c
freemodbus/tcp_slave/port/: port_tcp_slave.c  port_tcp_slave.h
freemodbus/unit_test/include/: dep_inject.h  port_tcp_master_test.h  port_tcp_slave_test.h  portserial_m_test.h  portserial_test.h
freemodbus/unit_test/mb_utest_lib/: CMakeLists.txt  hw_subst.c  hw_subst.h  mbport_stubs.c  mbport_stubs.h  pcap.c  pcap.h  ut_io.c  ut_io.h
freemodbus/unit_test/src/: port_tcp_master_test.c  port_tcp_slave_test.c  portserial_m_test.c  portserial_test.c
modbus/mb_controller/common/: esp_modbus_master.c  esp_modbus_master_serial.c  esp_modbus_master_tcp.c  esp_modbus_slave.c  esp_modbus_slave_serial.c  esp_modbus_slave_tcp.c  mbc_master.h  mbc_slave.h
modbus/mb_controller/common/include/: esp_modbus_common.h  esp_modbus_master.h  esp_modbus_slave.h
modbus/mb_controller/serial/: mbc_serial_master.c  mbc_serial_master.h  mbc_serial_slave.c  mbc_serial_slave.h
modbus/mb_controller/tcp/: mbc_tcp_master.c  mbc_tcp_master.h  mbc_tcp_slave.c
modbus/mb_objects/: default_callbacks.c  mb_master.c  mb_slave.c
modbus/mb_objects/functions/: mbfunccoils_master.c  mbfuncdisc_master.c  mbfuncholding.c  mbfuncholding_master.c  mbfuncinput_master.c
modbus/mb_objects/include/: mb_callbacks.h  mb_common.h  mb_config.h  mb_frame.h  mb_func.h  mb_master.h  mb_port_types.h  mb_proto.h  mb_slave.h  mb_types.h  mb_utils.h
modbus/mb_ports/common/: port_common.h  port_event.c  port_other.c  port_timer.c
modbus/mb_ports/serial/: port_serial.c  port_serial_common.h
modbus/mb_ports/tcp/: port_tcp_common.h  port_tcp_driver.c  port_tcp_driver.h  port_tcp_master.c  port_tcp_master.h  port_tcp_slave.c  port_tcp_utils.c  port_tcp_utils.h
modbus/mb_transports/: transport_common.h
modbus/mb_transports/ascii/: ascii_lrc.c  ascii_lrc.h  ascii_master.c  ascii_slave.c  ascii_transport.h
modbus/mb_transports/rtu/: mbcrc.c  mbcrc.h  rtu_master.c  rtu_slave.c  rtu_transport.h
modbus/mb_transports/tcp/: tcp_master.c  tcp_slave.c  tcp_transport.h
test/mb_example_common/: CMakeLists.txt
test/mb_example_common/include/: modbus_params.h
test/mbm_serial_utest/: CMakeLists.txt  sdkconfig.defaults
test/mbm_serial_utest/fs/: mbm_serial_input.pcap
test/mbm_serial_utest/main/: CMakeLists.txt  master.c
test/mbm_tcp_utest/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
test/mbm_tcp_utest/fs/: mbm_serial_output.pcap  mbm_tcp_input.pcap  mbm_tcp_output.pcap
test/mbm_tcp_utest/main/: CMakeLists.txt  tcp_master.c
test/mbs_serial_utest/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
test/mbs_serial_utest/fs/: mbs_serial_input.pcap  mbs_serial_output.pcap
test/mbs_serial_utest/main/: CMakeLists.txt
test/mbs_tcp_utest/: CMakeLists.txt  sdkconfig.defaults
test/mbs_tcp_utest/fs/: mbs_tcp_input.pcap  mbs_tcp_output.pcap
test/mbs_tcp_utest/main/: CMakeLists.txt  tcp_slave.c
test_app/mb_example_common/include/: modbus_params.h.orig
test_app/serial/: app_test.py
test_app/serial/mb_master/: CMakeLists.txt
test_app/serial/mb_master/main/: master.c
test_app/serial/mb_slave/: CMakeLists.txt  README.md
test_app/tcp/: app_test.py
test_app/tcp/mb_tcp_master/: CMakeLists.txt
test_app/tcp/mb_tcp_master/main/: tcp_master.c
test_app/tcp/mb_tcp_slave/: CMakeLists.txt
test_app/tcp/mb_tcp_slave/main/: tcp_slave.c
test_apps/manual/: CMakeLists.txt  README.md  manual_test_apps.code-workspace  pytest_multi_instance.py  sdkconfig.defaults
test_apps/manual/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  test_app_main.c  test_common.c  test_master_slave.c  test_multi_master_serial.c  test_multi_master_tcp.c
